Fixed navbar overlapping on modal

--- a/static/tfcss/admin_panel/bcsTF/nav.css
+++ b/static/tfcss/admin_panel/bcsTF/nav.css
@@ -391,7 +391,6 @@ body {
 }
 
 .modal-backdrop.show {
-    margin-left: 20% !important;
     opacity: .8;
 }
 
